tests/final/expect/15__diag__axis4_wave2_malformed_include_guard_cycle_reentry_no_crash.diag
Diagnostics:
Error: preprocessing failed
axis4_wave2_guard_cycle_layer_c.h:480301:10: error: detected recursive include of '/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/probes/diagnostics/15__probe_diag_axis4_wave2_malformed_include_guard_cycle_reentry_no_crash_b.h'
axis4_wave2_guard_cycle_layer_c.h:480301:10: error: detected recursive include of '/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/probes/diagnostics/15__probe_diag_axis4_wave2_malformed_include_guard_cycle_reentry_no_crash_b.h'
